# sisyphus

./: .env.example  .gitignore  main.py  package-lock.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api-types.ts  api.ts  hooks.ts  index.css  main.tsx  presentation.ts
frontend/src/components/: overflow-tip.tsx  story.tsx  ui.tsx
frontend/src/views/: Onboarding.tsx  Preferences.tsx  Profile.tsx  Review.tsx
migrations/: env.py
migrations/versions/: 7c4e2b9a1f03_search_preferences.py  b28c13367666_baseline_infrastructure_and_candidate_.py  f3778be70360_interview_question_table.py
scripts/: export_openapi.py
src/job_appli/: config.py  main.py
src/job_appli/candidate/: context.py  extraction.py  ingestion.py  interview.py  models.py
src/job_appli/db/: base.py  migrations.py  models.py
src/job_appli/events/: publisher.py
src/job_appli/llm/: prompts.py  service.py
src/job_appli/llm/prompts/: onboarding_interview.v1.md  resume_interpret.v1.md
src/job_appli/preferences/: __init__.py  models.py  service.py
src/job_appli/web/: app.py  onboarding.py  preferences.py  profile.py  resumes.py
src/job_appli/workflows/: runtime.py
tests/: conftest.py  test_api.py  test_context_interview.py  test_infrastructure.py  test_ingestion.py
