[project]
name = "job-appli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbos>=2.27.0",
    "fastapi>=0.139.2",
    "playwright>=1.61.0",
    "pydantic-ai>=2.12.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
